--- a/resources/css/custom.css
+++ b/resources/css/custom.css
@@ -2,6 +2,16 @@ html, body {
 	height: 100%;
 }
 
+ul {
+    padding-left: 24px;
+}
+
+li{
+    list-style-type: none;
+}
+
 #targetMenuContainer {
 
 }
+
+
